# AUTHOR: vuolter
#      ____________
#   _ /       |    \ ___________ _ _______________ _ ___ _______________
#  /  |    ___/    |   _ __ _  _| |   ___  __ _ __| |   \\    ___  ___ _\
# /   \___/  ______/  | '_ \ || | |__/ _ \/ _` / _` |    \\  / _ \/ _ `/ \
# \       |   o|      | .__/\_, |____\___/\__,_\__,_|    // /_//_/\_, /  /
#  \______\    /______|_|___|__/________________________//______ /___/__/
#          \  /
#           \/

# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyload-ng
description = The Free and open-source Download Manager written in pure Python
author = pyLoad team
author-email = support@pyload.net
license = agpl3
license_file = LICENSE.md
url = https://pyload.net
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyload, download-manager, one-click-hoster, download
platforms = any
maintainer = Walter Purcaro
maintainer_email = vuolter@gmail.com
download_url = https://github.com/pyload/pyload/releases
project_urls =
    Bug Tracker = https://github.com/pyload/pyload/issues
    Documentation = https://github.com/pyload/pyload/wiki
    Source Code = https://github.com/pyload/pyload
    Source Code (mirror) = https://gitlab.com/pyload/pyload
obsoletes = pyload
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha    Environment :: Console
    Environment :: Plugins
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
[options]
zip_safe = True
packages = find:
include_package_data = True
package_dir =
    = src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires =
    Cheroot~=6.5
    cryptography~=2.4
    easy-getch~=1.0
    Flask~=1.0
    Flask-Babel~=0.12
    Flask-DebugToolbar~=0.10
    Flask-Themes2~=0.1
    requests-html~=0.10
    semver~=2.8
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
all =
    beautifulsoup4
    colorlog
    Pillow
    pycryptodomex
    pyOpenSSL
    pyxmpp2
    Send2Trash
test =
    nose
    pytest
    pytest-cov
deploy =
    Babel
    readme_renderer[md]
    Sphinx>1.4
    wheel

[options.entry_points]
console_scripts =
    pyload = pyload.core.script:main
    pyload-cli = pyload.cli.script:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov pyload --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
release = sdist build_locale bdist_wheel

[sdist]
formats = zip

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build
# all_files  = 1
# warning-is-error = 1
# fresh-env = 1

[upload_sphinx]
upload-dir = docs/_build/html

[compile_catalog]
domain = pyload
directory = src/pyload/locale
use-fuzzy = 1

[extract_messages]
mapping_file = babel.cfg
output_file = src/pyload/locale/pyload.pot
input_dirs = src/pyload

[init_catalog]
domain = pyload
output_dir = src/pyload/locale
input_file = src/pyload/locale/pyload.pot
locale = en

[update_catalog]
domain = pyload
output_dir = src/pyload/locale
input_file = src/pyload/locale/pyload.pot

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# doctests = True
# pep8 code description:
#   D203: 1 blank line required before class docstring
#   E116: unexpected indentation (comment)
#   E302: expected 2 blank lines, found 1
#   E501: line too long
#   E731: do not assign a lambda expression, use a def
#   F401: module imported but unused
#   F403: ‘from module import *’ used; unable to detect undefined names
#   F405: name may be undefined, or defined from star imports: module
#   F812: list comprehension redefines ...
#   H101: Use TODO(NAME)
#   H202: assertRaises Exception too broad
#   H301: one import per line
#   H306: imports not in alphabetical order (time, os)
#   H401: docstring should not start with a space
#   H404: multi line docstring should start without a leading new line
#   H405: multi line docstring summary not separated with an empty line
#   H501: Do not use self.__dict__ for string formatting
ignore = D203,E116,E302,E501,E731,F401,F403,F405,F812,H101,H202,H301,H306,H401,H404,H405,H501
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = pyload
extensions =
    markdown
    gitlab
    pyproject
    tox
    travis
