#       ____________
#   ___/       |    \_____________ _                 _ ___
#  /        ___/    |    _ __ _  _| |   ___  __ _ __| |   \
# /    \___/  ______/   | '_ \ || | |__/ _ \/ _` / _` |    \
# \            ◯ |      | .__/\_, |____\___/\__,_\__,_|    /
#  \_______\    /_______|_|   |__/________________________/
#           \  /
#            \/

# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyload-ng
description = The free and open-source Download Manager written in pure Python
author = pyLoad team
author_email = support@pyload.net
license = agpl3
license_files = LICENSE.md
url = https://pyload.net
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyload, download-manager, one-click-hoster, download
platforms = any
maintainer = Walter Purcaro
maintainer_email = vuolter@gmail.com
download_url = https://github.com/pyload/pyload/releases
project_urls =
    Source Code (mirror) = https://gitlab.com/pyload/pyload
    Source Code = https://github.com/pyload/pyload
    Bug Tracker = https://github.com/pyload/pyload/issues
    Documentation = https://github.com/pyload/pyload/wiki
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Plugins
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = src
install_requires =
    Cheroot
    Flask
    Flask-Babel
    Flask-Caching~=1.9
    Flask-Compress~=1.8
    Flask-Session~=0.4.1;python_version<"3.7"
    Flask-Session;python_version>="3.7"
    Flask-Themes2~=1.0
    bitmath~=1.3
    cryptography>=35.0.0,<41.0.0;platform_python_implementation!="PyPy" and python_version<"3.7"
    cryptography>=35.0.0;platform_python_implementation!="PyPy" and python_version>="3.7"
    cryptography>=35.0.0,<40.0.0;platform_python_implementation=='PyPy'
    filetype~=1.0
    Js2Py~=0.7;python_version<"3.12"
    dukPy>=0.3.1;python_version>="3.12"
    pycurl~=7.43
    certifi
    # requests-html~=0.10
    semver~=2.10
    setuptools>=38.3
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
all =
    beautifulsoup4
    colorlog
    Pillow
    pyOpenSSL
    slixmpp
    Send2Trash
    pyobjc-framework-Cocoa;platform_system=="Darwin" and python_version<"3.8"  # required by Send2Trash

    Babel
    Jinja2
build =
    Babel
    Jinja2
#   Sphinx>1.4
plugins =
    beautifulsoup4
    colorlog
    Pillow
    pyOpenSSL
    slixmpp
    Send2Trash
    pyobjc-framework-Cocoa;platform_system=="Darwin" and python_version<"3.8"  # required by Send2Trash
# test =
#     nose
#     pytest
#     pytest-cov

[options.entry_points]
console_scripts =
    pyload = pyload.__main__:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov pyload --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build
# all_files  = 1
# warning-is-error = 1
# fresh-env = 1

[upload_sphinx]
upload-dir = docs/_build/html

[compile_catalog]
domain = pyload
directory = src/pyload/locale
use-fuzzy = 1

[extract_messages]
;mapping_file = babel.cfg
output_file = src/pyload/locale/pyload.pot
input_dirs = src/pyload

[init_catalog]
domain = pyload
output_dir = src/pyload/locale
input_file = src/pyload/locale/pyload.pot
locale = en

[update_catalog]
domain = pyload
output_dir = src/pyload/locale
input_file = src/pyload/locale/pyload.pot

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
